# uix_test

./: CMakeLists.txt  changes for 2.0.txt  main.cpp  run.cmd  test.tvg  test.tvgt
include/: OpenSans_Regular.h  app_main.h  terminal.h  tiger_svg.h  tiger_tvg.h
src/: main.cpp  winmain.cpp
